compiler/src/test/resources/amyc/parser/failing/FunDefError5.grading.amy
object FunDef
  fn foo(i: Int,): Int = { 42 }
end FunDef
